kuma/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uk-route
  namespace: uptime

spec:
  parentRefs:
  - name: gateway-api
    namespace: default
    sectionName: http
    kind: Gateway
  - name: gateway-api
    namespace: default
    sectionName: https
    kind: Gateway

  hostnames:
  - uk.isujith.dev

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: uptime-kuma-service
      port: 3001
      weight: 1
